// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widget test should test for the Icons component 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`widget test should test for the Icons component 2`] = `
<Menu
  className="widgetContainer"
>
  <div
    className="icons"
  >
    <Connect(ReactionIcons)
      date="current-date"
      selectedArticleId={1}
    />
  </div>
</Menu>
`;

exports[`widget test should test for the advert component 1`] = `
<GridColumn
  className="Advert"
>
  <Image
    as="img"
    className="AdvertImg"
    src="https://res.cloudinary.com/ah-krypton/image/upload/v1548328425/mm17kbfqf7sjrw2w45rq.png"
    ui={true}
  />
</GridColumn>
`;

exports[`widget test should test for the article feed  component 1`] = `<componentloader />`;

exports[`widget test should test for the button component 1`] = `
<Card
  className="widgetIcons"
>
  <CardContent
    className={true}
  >
    <Feed>
      <MainFeaturedArticle
        date="2019-01-23T07:09:10.447Z"
        description="Descriptive title"
        id="65719288-0395-445e-b587-2b98b70bdec9"
        image="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg"
        key="65719288-0395-445e-b587-2b98b70bdec9"
        slug="this-is-a-post-title-l78hgybf"
        title="This is a post title"
      />
    </Feed>
  </CardContent>
</Card>
`;

exports[`widget test should test for the button component 2`] = `
<Card
  className="widgetIcons"
>
  <CardContent
    className={true}
  >
<<<<<<< HEAD
    <Feed>
      <MainFeaturedArticle
        date="2019-01-23T07:09:10.447Z"
        description="Descriptive title"
        id="65719288-0395-445e-b587-2b98b70bdec9"
        image="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg"
        key="65719288-0395-445e-b587-2b98b70bdec9"
        slug="this-is-a-post-title-l78hgybf"
        title="This is a post title"
      />
    </Feed>
=======
    <Feed />
>>>>>>> landing-page-logic
  </CardContent>
</Card>
`;
